@@ -9,6 +9,7 @@ Current git version
 
   * New client attribute 'floating_effectively' and associated X11 properties
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
+  * New read-only client attribute 'decoration_geometry'.
   * Bug fixes:
     - Update floating geometry if a client's size hints change
 
